Fixed hover flickering, added padding to hovered element and added Google fonts

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,7 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #000000;
@@ -195,6 +193,7 @@ button {
   display: flex;
   flex-direction: column;
   position: absolute;
+  padding: 20px;
   top: 0px;
   bottom: 0px;
   right: 0px;
@@ -208,7 +207,7 @@ button {
   width: calc(50% - 20px)
 }
 
-.posterContainer:hover+.movieInfo {
+.posterAndInfo:hover > .movieInfo {
   visibility: visible;
 }
 
